<resources>
    <string name="app_name">ChallengeChapter4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="belum_punya_akun"><font color='00000000'>Belum punya akun? Klik disini untuk </font><font color='#00AEFF'>Daftar</font></string>
    <string name="store_name">MF Store</string>
    <string name="add_list">add_list</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="harga_beli">Harga Beli</string>
    <string name="harga_jual">Harga Jual</string>
    <string name="welcome_user">Welcome user</string>
    <string name="logout">Logout</string>
    <string name="tambah_barang">Tambah Barang</string>
    <string name="presentase_keuntungan">Presentase keuntungan</string>
    <string name="edit_harga">Edit Harga</string>
    <string name="update_harga">Update Harga</string>
    <string name="warning_item_name">Nama barang harus diisi yaa</string>
    <string name="warning_purchase_price">Harga barang harus diisi yaa</string>
    <string name="warning_precent">Kamu harus tentuin keuntunganmu</string>
    <string name="data_masih_kosong_nih">Data masih kosong nih :(</string>

</resources>