<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:id="@+id/item_rv"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    app:strokeColor="@color/blue"
    app:strokeWidth="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_nama_barang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_barang"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_beli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harga_beli"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_nama_barang" />
        <TextView
            android:id="@+id/tv_harga_beli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harga_beli"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="25dp"
            app:layout_constraintStart_toEndOf="@id/text_beli"
            app:layout_constraintTop_toBottomOf="@id/tv_nama_barang" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harga_jual"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_harga_beli" />
        <TextView
            android:id="@+id/tv_harga_jual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harga_jual"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/tv_harga_beli"
            app:layout_constraintTop_toBottomOf="@id/tv_harga_beli" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>